--- a/src/Pages/UserProfile/style.css
+++ b/src/Pages/UserProfile/style.css
@@ -57,11 +57,11 @@
 .sections {
   display: flex;
   gap: 1.5rem;
-  margin-top: 1rem;
+  margin: 1rem 0;
 }
 
 .section {
-  padding: 0.5rem 1.4rem;
+  padding: 0.4em 1.4rem;
   font-size: 0.9rem;
   border-radius: 3rem;
   border: 1px solid #9e9e9e;
@@ -77,7 +77,6 @@
   width: 100vw;
   height: 1px;
   background-color: #386fa4;
-  margin-top: 1.5rem;
 }
 
 .user_action {
