--- a/src/components/Beep/style.css
+++ b/src/components/Beep/style.css
@@ -1,12 +1,16 @@
 .beep {
   border-bottom: 4px solid #000;
+  max-width: 550px;
+  margin: 1rem auto;
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  border-radius: 16px;
 }
 
 .header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0.6rem;
+  padding: 1rem;
 }
 
 .beeper-info {
@@ -32,11 +36,12 @@
 }
 
 .beep-img {
-  max-width: 100vw;
+  max-width: 548px;
 }
 
 .beep > p {
-  padding: 0.8rem;
+  padding: 1.2rem;
+  text-align: left;
 }
 
 .beep > p > span {
@@ -48,17 +53,23 @@
   align-items: center;
   justify-content: space-between;
   border-top: 1px solid #9e9e9e;
-  padding: 1rem 0.6rem;
+  padding: 1rem;
 }
 
 .engage_buttons {
   display: flex;
-  gap: 1.5rem;
+  gap: 2rem;
 }
 
 .engagement {
   align-items: center;
   display: flex;
   gap: 0.4rem;
-  font-size: 0.8rem;
+  font-size: 0.9rem;
+}
+
+@media (max-width: 750px) {
+  .beep-img {
+    max-width: calc(95vw - 2px);
+  }
 }
