--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
-body {
+body,
+input {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
@@ -16,4 +17,8 @@ code {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+}
+
+img {
+  display: inline-block;
 }
