--- a/src/components/Beep/style.css
+++ b/src/components/Beep/style.css
@@ -72,8 +72,8 @@
 
 @media (max-width: 750px) {
   .beep {
-    width: 90vw;
-    margin: 1rem auto;
+    width: 95vw;
+    margin: 0.4rem auto;
   }
 
   .header {
@@ -93,7 +93,10 @@
     color: #9e9e9e;
   }
   .beep-img {
-    width: calc(90vw - 2px);
+    width: calc(95vw - 2px);
+  }
+  .engage {
+    padding: 0.8rem 0.5rem;
   }
 
   .engage_buttons {
