--- a/src/components/Profile/style.css
+++ b/src/components/Profile/style.css
@@ -166,6 +166,19 @@
     width: 100vw;
     min-width: 100vw;
   }
+
+  .link {
+    font-size: 0.8rem;
+  }
+
+  .info > p:first-child {
+    font-size: 0.8rem;
+  }
+
+  .info > p:last-child {
+    color: #9e9e9e;
+    font-size: 0.7rem;
+  }
   .profile-container,
   .feeder {
     bottom: 60px;
