--- a/src/components/Feed/style.css
+++ b/src/components/Feed/style.css
@@ -45,7 +45,7 @@
     padding: 0.4rem;
     border-radius: 12px;
     width: 95vw;
-    margin: 0.4rem 0;
+    margin: 0.4rem auto;
   }
   .addbeep input {
     width: 55vw;
