--- a/src/components/Sidebar/style.css
+++ b/src/components/Sidebar/style.css
@@ -1,25 +1,30 @@
 .sidebar {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 0.8rem;
   /* border: 1px solid red; */
-  width: 25vw;
+  width: 20vw;
   padding-top: 3rem;
   padding-left: 5rem;
   min-width: 325px;
-  /* font-size: 0.9rem; */
+  font-size: 1.1 rem;
 }
 
 .side-nav {
   display: flex;
   align-items: center;
   gap: 0.7rem;
-  padding: 1rem;
+  padding: 0.8rem;
   cursor: pointer;
 }
 
 .side-nav:hover {
   color: #386fa4;
+}
+
+.sidebar img {
+  margin-top: 2rem;
+  margin-left: 1rem;
 }
 
 @media (max-width: 750px) {
