--- a/src/components/Topbar/style.css
+++ b/src/components/Topbar/style.css
@@ -1,9 +1,8 @@
 .topbar {
   display: flex;
-  justify-content: space-between;
   align-items: center;
   font-size: 0.8rem;
-  padding: 0.9rem 5rem;
+  padding: 0.9rem 0;
   position: sticky;
   top: 0;
   z-index: 1000;
@@ -13,7 +12,18 @@
 }
 
 .nav-logo {
-  padding: 0 3rem;
+  width: 20vw;
+  padding-left: 5rem;
+  min-width: 325px;
+}
+.nav-logo img {
+  margin: auto;
+}
+
+.topbar-right {
+  /* width: 80vw; */
+  display: flex;
+  justify-content: space-between;
 }
 
 .search {
