--- a/src/components/Beep/style.css
+++ b/src/components/Beep/style.css
@@ -6,36 +6,36 @@
   border-radius: 16px;
 }
 
-.header {
+.beep__header {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 1rem;
 }
 
-.beeper-info {
+.beeper__info {
   display: flex;
   align-items: center;
   gap: 0.8rem;
 }
 
-.beeper_name p {
+.beeper__name p {
   display: flex;
   gap: 0.4rem;
 }
 
-.beeper_name p:last-child {
+.beeper__name p:last-child {
   color: #9e9e9e;
   font-size: 0.9rem;
 }
 
-.beeper_name p > span:last-child {
+.beeper__name p > span:last-child {
   color: #9e9e9e;
   display: flex;
   align-items: center;
 }
 
-.beep-img {
+.beep__img {
   max-width: 548px;
 }
 
@@ -48,7 +48,7 @@
   color: #9e9e9e;
 }
 
-.engage {
+.beep__engage {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -56,18 +56,21 @@
   padding: 1rem;
 }
 
-.engage_buttons {
+.engage_btns {
   display: flex;
   gap: 2rem;
 }
 
-.engagement {
+.engage_btns button {
   align-items: center;
   display: flex;
   gap: 0.4rem;
   font-size: 0.75rem;
   line-height: normal;
   cursor: pointer;
+  background-color: transparent;
+  border: none;
+  color: white;
 }
 
 @media (max-width: 750px) {
@@ -76,11 +79,11 @@
     margin: 0.4rem auto;
   }
 
-  .header {
+  .beep__header {
     padding: 0.5rem;
   }
 
-  .header .beep-avatar {
+  .beep__header .beep-avatar {
     width: 35px;
   }
 
@@ -92,26 +95,26 @@
   .beep > p > span {
     color: #9e9e9e;
   }
-  .beep-img {
+  .beep__img {
     width: calc(95vw - 2px);
   }
-  .engage {
+  .beep__engage {
     padding: 0.8rem 0.5rem;
   }
 
-  .engage_buttons {
+  .engage_btns {
     display: flex;
     gap: 1rem;
   }
-  .engage_buttons p {
+  .engage_btns p {
     font-size: 0.6rem;
   }
 
-  .beeper_name p {
+  .beeper__name p {
     font-size: 0.8rem;
   }
 
-  .beeper_name p:last-child {
+  .beeper__name p:last-child {
     font-size: 0.7rem;
   }
 }
