--- a/src/components/PersonalFeed/style.css
+++ b/src/components/PersonalFeed/style.css
@@ -1,17 +1,8 @@
-.addbeep {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  gap: 0.8rem;
-  padding: 0.5rem 1rem;
-  border: 1px solid rgba(255, 255, 255, 0.2);
-  border-radius: 16px;
-  margin: 12.5px;
-}
-
-.feed {
+.personal-feed {
   width: 40vw;
   min-width: 585px;
+  height: 100vh;
+  overflow-y: scroll;
 }
 
 .addbeep input {
@@ -22,6 +13,21 @@
   flex: 1;
 }
 
+.feed::-webkit-scrollbar {
+  width: 10px;
+}
+.feed::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+.feed::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  border: 3px solid transparent;
+  background-clip: content-box;
+  background-color: #9e9e9e;
+}
+.feed::-webkit-scrollbar-thumb:hover {
+  background-color: #386fa4;
+}
 @media (max-width: 750px) {
   .addbeep {
     gap: 0.5rem;
