--- a/src/components/Sidebar/style.css
+++ b/src/components/Sidebar/style.css
@@ -1,13 +1,14 @@
 .sidebar {
   display: flex;
   flex-direction: column;
-  gap: 0.8rem;
-  /* border: 1px solid red; */
-  width: 20vw;
-  padding-top: 3rem;
-  padding-left: 5rem;
-  min-width: 325px;
-  font-size: 1.1 rem;
+  gap: 0.6rem;
+  padding-top: 1rem;
+  padding-left: 1.5rem;
+  font-size: 1.2rem;
+  position: sticky;
+  left: 0;
+  top: 67px;
+  align-self: flex-start;
 }
 
 .side-nav {
@@ -15,6 +16,7 @@
   align-items: center;
   gap: 0.7rem;
   padding: 0.8rem;
+  padding-left: 0;
   cursor: pointer;
 }
 
@@ -23,7 +25,7 @@
 }
 
 .sidebar img {
-  margin-top: 2rem;
+  margin-top: 4rem;
   margin-left: 1rem;
 }
 
