--- a/src/components/FooterMenu/style.css
+++ b/src/components/FooterMenu/style.css
@@ -2,15 +2,29 @@
   display: none;
 }
 
-.menu-item {
-  text-align: center;
-  cursor: pointer;
-  font-size: 0.8rem;
-  width: 20%;
+.footer a:hover {
+  color: white;
 }
 
-.menu-item:hover {
+.footer a {
+  text-align: center;
+  cursor: pointer;
+  width: 72px;
+  color: #9e9e9e;
+  text-decoration: none;
+  font-size: 0.8rem;
+}
+.footer a:hover {
   color: white;
+}
+
+.active p {
+  color: #386fa4;
+}
+
+.active img {
+  border: 2px solid #386fa4;
+  border-radius: 50%;
 }
 
 @media (max-width: 750px) {
