--- a/src/components/FooterMenu/style.css
+++ b/src/components/FooterMenu/style.css
@@ -33,10 +33,11 @@
     align-items: center;
     justify-content: space-between;
     gap: 2rem;
-    padding: 1rem;
+    padding: 0.3rem 1rem;
     background-color: #0a151e;
     position: sticky;
     bottom: 0;
     z-index: 100;
+    border-top: 1px solid rgba(255, 255, 255, 0.2);
   }
 }
