--- a/src/components/Beep/style.css
+++ b/src/components/Beep/style.css
@@ -82,7 +82,7 @@
   }
 
   .beep__header {
-    padding: 0.5rem;
+    margin: 0.6rem;
   }
 
   .beep__header .beep-avatar {
@@ -90,7 +90,7 @@
   }
 
   .beep > p {
-    padding: 0.6rem;
+    margin: 0.6rem;
     font-size: 0.9rem;
   }
 
