--- a/src/components/Profile/style.css
+++ b/src/components/Profile/style.css
@@ -47,7 +47,7 @@
 }
 
 .profile__info > p {
-  margin-top: 1.5rem;
+  margin: 1rem 0;
   font-size: 1rem;
 }
 
@@ -106,6 +106,7 @@
   border-radius: 3rem;
   border: 1px solid #9e9e9e;
   color: #9e9e9e;
+  cursor: pointer;
 }
 
 .active_section {
