--- a/src/components/Sidebar/style.css
+++ b/src/components/Sidebar/style.css
@@ -31,6 +31,16 @@
 
 @media (max-width: 750px) {
   .sidebar {
+    /* display: none; */
+    position: relative;
+    width: 85vw;
+    top: unset;
+    font-size: 1rem;
+  }
+
+  .sidebar img {
     display: none;
+    /* margin-top: 4rem;
+  margin-left: 1rem; */
   }
 }
