--- a/src/components/Layout/style.css
+++ b/src/components/Layout/style.css
@@ -1,57 +1,81 @@
-.layout {
-  position: relative;
+.right-bar {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  margin: 1rem auto;
+  margin-bottom: 0;
 }
 
-.layout main {
-  width: 1250px;
-  position: relative;
-  margin: auto;
-  display: grid;
-  grid-template-columns: 3fr 13fr;
+.trending,
+.recent {
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  border-radius: 16px;
+  padding-bottom: 1rem;
+  width: 342px;
+}
+
+.trending img {
+  width: 340px;
+}
+
+.trending > p {
+  padding: 1rem;
+  padding-bottom: 0;
+  display: flex;
+  align-items: center;
+}
+
+.trending > p > img {
+  margin: 0 0.5rem;
+  width: auto;
+}
+
+.trend-class {
+  display: flex;
+  justify-content: space-between;
+  gap: 0.5rem;
+  margin: 1rem 0;
+  padding: 0 1rem;
+}
+
+.trend-class > p {
+  padding: 0.3rem 0.6rem;
+  border-radius: 2rem;
+  font-size: 0.9rem;
+}
+
+.trend-class > p:first-child {
+  background-color: #386fa4;
+}
+
+.recent {
+  padding: 1rem;
+}
+
+.activity {
+  display: flex;
+  align-items: center;
+  margin-top: 1rem;
+  gap: 1rem;
+}
+.activity img {
+  padding: 0.4rem 0.7rem;
+  border: 1px solid white;
+  border-radius: 0.5rem;
+}
+
+.activity h3 {
+  font-weight: normal;
+  font-size: 1rem;
+}
+
+.activity p {
+  font-size: 0.8rem;
+  color: #9e9e9e;
 }
 
 @media (max-width: 750px) {
-  @keyframes openSidebar {
-    0% {
-      left: -85vw;
-    }
-    100% {
-      left: 0;
-    }
-  }
-  @keyframes closeSidebar {
-    0% {
-      left: 0;
-    }
-    100% {
-      left: -85vw;
-    }
-  }
-  .layout {
-    max-width: 100vw;
-    overflow: hidden;
-  }
-  .layout main {
-    min-width: 100vw;
-    position: relative;
-    left: -85vw;
-    /* height: max-content; */
-    min-height: calc(100vh - 113px);
-    overflow-y: scroll;
-    margin: auto;
-    display: flex;
-    flex-direction: row;
-    /* align-items: center; */
-  }
-
-  .activateSidebar {
-    animation: openSidebar 0.3s ease-in-out both;
-  }
-  .deactivateSidebar {
-    animation: closeSidebar 0.3s ease-in-out both;
-  }
-  .layout section {
-    max-height: calc(100vh - 113px);
-    overflow-y: scroll;
+  .right-bar {
+    display: none;
   }
 }
