--- a/src/components/BeepPrompt/style.css
+++ b/src/components/BeepPrompt/style.css
@@ -48,6 +48,27 @@
   cursor: pointer;
 }
 
+.textarea {
+  border: 1px solid #ccc;
+  font-family: inherit;
+  font-size: inherit;
+  padding: 1px 6px;
+}
+
+.textarea {
+  display: block;
+  width: 100%;
+  overflow: hidden;
+  resize: both;
+  min-height: 40px;
+  line-height: 20px;
+}
+
+.textarea[contenteditable]:empty::before {
+  content: "Placeholder still possible";
+  color: gray;
+}
+
 @media (max-width: 750px) {
   .beep_prompt {
     background-color: #0a151e;
