--- a/src/components/Layout/style.css
+++ b/src/components/Layout/style.css
@@ -11,11 +11,11 @@
   border: 1px solid rgba(255, 255, 255, 0.2);
   border-radius: 16px;
   padding-bottom: 1rem;
-  width: 342px;
+  width: 402px;
 }
 
 .trending img {
-  width: 340px;
+  width: 400px;
 }
 
 .trending > p {
@@ -23,6 +23,13 @@
   padding-bottom: 0;
   display: flex;
   align-items: center;
+}
+
+.auth {
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  border-radius: 16px;
+  padding: 1rem;
+  width: 402px;
 }
 
 .trending > p > img {
