--- a/src/components/BeepPrompt/style.css
+++ b/src/components/BeepPrompt/style.css
@@ -14,6 +14,7 @@
   width: 30rem;
   background-color: #0a151e;
   color: #fff;
+  font-size: 1rem;
 }
 
 .beep_prompt textarea:focus {
@@ -51,7 +52,7 @@
 .textarea {
   border: 1px solid #ccc;
   font-family: inherit;
-  font-size: inherit;
+  font-size: 1rem;
   padding: 1px 6px;
 }
 
